completed first portfolio step: html + css

--- a/index.html
+++ b/index.html
@@ -1,10 +1,105 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Raphaël Bigot - front-end developer</title>
+
+    <link rel="stylesheet" href="src/assets/css/styles.min.css">
+
+    <link rel="apple-touch-icon" sizes="57x57" href="apple-icon-57x57.png">
+    <link rel="apple-touch-icon" sizes="60x60" href="apple-icon-60x60.png">
+    <link rel="apple-touch-icon" sizes="72x72" href="apple-icon-72x72.png">
+    <link rel="apple-touch-icon" sizes="76x76" href="apple-icon-76x76.png">
+    <link rel="apple-touch-icon" sizes="114x114" href="apple-icon-114x114.png">
+    <link rel="apple-touch-icon" sizes="120x120" href="apple-icon-120x120.png">
+    <link rel="apple-touch-icon" sizes="144x144" href="apple-icon-144x144.png">
+    <link rel="apple-touch-icon" sizes="152x152" href="apple-icon-152x152.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="apple-icon-180x180.png">
+    <link rel="icon" type="image/png" sizes="192x192" href="android-icon-192x192.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="96x96" href="favicon-96x96.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
+    <link rel="manifest" href="/manifest.json">
+    <meta name="msapplication-TileColor" content="#ffffff">
+    <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
+    <meta name="theme-color" content="#ffffff">
 </head>
 <body>
+
+<header class="mainHeader">
+    <div class="mainHeader_inner">
+        <img class="mainHeader_logo" src="src/assets/img/sources/udacity-logo.svg" alt="Udacity logo">
+        <h1 class="mainHeader_title">Raphaël Bigot</h1>
+    </div>
+    <h2 class="mainHeader_subtitle">
+        <span class="mainHeader_subtitle_wording">Front-end Developer</span>
+    </h2>
+</header>
+
+<main class="container">
+    <p class="simpleText">
+        Haec subinde Constantius audiens et quaedam referente Thalassio doctus, quem eum odisse iam conpererat lege communi,
+        scribens ad Caesarem blandius adiumenta paulatim illi subtraxit, sollicitari se simulans ne, uti est militare otium fere tumultuosum,
+        in eius perniciem conspiraret, solisque scholis iussit esse contentum palatinis et protectorum cum Scutariis et Gentilibus.
+    </p>
+
+    <nav class="mainNav">
+        <h3 class="genericTitle">Featured work</h3>
+
+        <ul class="mainNav_list">
+            <li class="mainNav_list_element">
+                <a href="#" class="mainNav_list_element_link" title="Appify works">
+                    <figure class="mainNav_list_element_link_inner">
+                        <img class="mainNav_list_element_link_image"
+                             sizes="(max-width: 768px) 100vw, 33vw"
+                             src="src/assets/img/generated/appify-original.jpg"
+                             srcset="src/assets/img/generated/appify-400px.jpg 400w,
+                         src/assets/img/generated/appify-400px_2x.jpg 800w,
+                         src/assets/img/generated/appify-400px_3x.jpg 1200w"
+                             alt="Appify illustration"
+                        >
+                        <figcaption class="mainNav_list_element_link_wording">Appify</figcaption>
+                    </figure>
+                    <h4 class="mainNav_list_element_link_title">Appify</h4>
+                </a>
+            </li>
+            <li class="mainNav_list_element">
+                <a href="#" class="mainNav_list_element_link" title="Sunflower works">
+                    <figure class="mainNav_list_element_link_inner">
+                        <img class="mainNav_list_element_link_image"
+                             sizes="(max-width: 768px) 100vw, 33vw"
+                             src="src/assets/img/generated/sunflower-original.jpg"
+                             srcset="src/assets/img/generated/sunflower-400px.jpg 400w,
+                         src/assets/img/generated/sunflower-400px_2x.jpg 800w,
+                         src/assets/img/generated/sunflower-400px_3x.jpg 1200w"
+                             alt="Sunflower illustration"
+                        >
+                        <figcaption class="mainNav_list_element_link_wording">Sunflower</figcaption>
+                    </figure>
+                    <h4 class="mainNav_list_element_link_title">Sunflower</h4>
+                </a>
+            </li>
+            <li class="mainNav_list_element">
+                <a href="#" class="mainNav_list_element_link" title="Bokeh works">
+                    <figure class="mainNav_list_element_link_inner">
+                        <img class="mainNav_list_element_link_image"
+                             sizes="(max-width: 768px) 100vw, 33vw"
+                             src="src/assets/img/generated/bokeh-original.jpg"
+                             srcset="src/assets/img/generated/bokeh-400px.jpg 400w,
+                         src/assets/img/generated/bokeh-400px_2x.jpg 800w,
+                         src/assets/img/generated/bokeh-400px_3x.jpg 1200w"
+                             alt="Bokeh illustration"
+                        >
+                        <figcaption class="mainNav_list_element_link_wording">Bokeh illustration</figcaption>
+                    </figure>
+                    <h4 class="mainNav_list_element_link_title">Bokeh</h4>
+                </a>
+            </li>
+        </ul>
+    </nav>
+
+</main>
 
 </body>
 </html>
